--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import Container from "./Container.astro"
     <div class="py-6">
         <div class="flex flex-col items-center justify-between md:flex-row">
             <div class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img class="w-auto" src="/Logo.heic" alt="Logo">
+                <img class="w-auto" src="/logo.heic" alt="Logo">
             </div>
             <div class="flex mt-4 md:m-0">
                 <div class="-mx-4">
