--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 
+
 @layer base {
   .font-outline {
     -webkit-text-stroke: 2.5px black;
@@ -20,11 +21,11 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #000000;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #000000;
+  background: #fffefe;
 }
 
 ::-webkit-scrollbar-thumb:hover {
