--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -39,7 +39,7 @@ import Container from "./Container.astro"
         </ul>
       </div>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <a class="px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="https://github.com/manulthanura/Positivus" target="_blank"><h2 class="text-center text-xl font-normal leading-7">Request a Quote</h2>
+        <a class="px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="mailto:aarnavsingh836@gmail.com" target="_blank"><h2 class="text-center text-xl font-normal leading-7">Request a Quote</h2>
         </a>
       </div>
     </div>
