--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -32,7 +32,7 @@ import Container from "./Container.astro"
             </li>
             ))}
             <li>
-                <a class="md:hidden px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="https://github.com/manulthanura/Positivus" target="_blank">
+                <a class="md:hidden px-9 py-5 rounded-2xl border border-zinc-900 bg-white hover:bg-black text-black hover:text-white inline-flex" href="mailto:aarnavsingh836@gmail.com" target="_blank">
                   <h2 class="text-center text-xl font-normal leading-7">Request a Quote</h2>
                 </a>
             </li>
